fix: shift block from product to benefits page

--- a/pages/benefits/BenefitsPage.module.scss
+++ b/pages/benefits/BenefitsPage.module.scss
@@ -2,7 +2,7 @@
 @use 'styles/animations';
 @use 'styles/colors';
 
-.slide {
+.mainSlide {
   @include container;
   padding-top: 180px;
   padding-bottom: 60px;
@@ -12,12 +12,9 @@
   }
 }
 
-.mainHeading {
+.heading {
   position: relative;
-  margin: 0 auto 24px;
-  text-transform: uppercase;
-  text-align: center;
-    max-width: 613px;
+
 
   &::after {
     background: linear-gradient(
@@ -41,6 +38,13 @@
     width: 100%;
     left: calc(50% - 1px);
     transform: translate(-50%, -50%);
+  }
+
+  &.main {
+    margin: 0 auto 24px;
+    text-transform: uppercase;
+    text-align: center;
+      max-width: 613px;
   }
 }
 
@@ -87,4 +91,23 @@ border-radius: 16px;
   @include desktop {
     padding: 140px 0;
   }
+}
+
+.slide {
+  @include container;
+  padding-top: 140px;
+  padding-bottom: 228px;
+
+
+  @include mobile-only {
+    font-size: 30px;
+    padding-top: 60px;
+    padding-bottom: 80px;
+  }
+}
+
+.bottomTitle {
+  max-width: 1038px;
+  text-align: center;
+  margin: 0 auto;
 }
