--- a/pages/product/ProductPage.module.scss
+++ b/pages/product/ProductPage.module.scss
@@ -4,6 +4,11 @@
 
 .layout {
   @include container;
+  padding-bottom: 70px;
+
+  @include desktop {
+    padding-bottom: 140px;
+  }
 }
 
 .firstSlide {
@@ -148,7 +153,7 @@
   }
 }
 
-.appStoreSlide {
+.slide {
   display: flex;
   gap: 67px;
   align-items: center;
@@ -158,35 +163,26 @@
 
   @include desktop {
     flex-direction: row;
+    max-width: 1400px;
+    justify-content: space-between;
+    margin: 0 auto;
   }
 }
 .lottieWrapper {
   order: 1;
-  max-width: 614px;
+  max-width: 848px;
   @include desktop {
     order: 0;
   }
 }
-.appStoreWrapper {
+.slideWrapper {
   display: flex;
   flex-direction: column;
   gap: 24px;
   text-align: center;
 
   @include desktop {
-    max-width: 1000px;
+    max-width: 485px;
     text-align: left;
-  }
-}
-
-.bottomTitle {
-  max-width: 1038px;
-  margin: 228px auto 228px;
-  text-align: center;
-
-  @include mobile-only {
-    font-size: 30px;
-    margin-top: 60px;
-    margin-bottom: 80px;
   }
 }
